2008-09-17  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.18.1 ===

2008-09-08  Tor Lillqvist  <tml@novell.com>

	Bug 551408 - gmodule.def generated to builddir, but required in srcdir

	* Makefile.am: Use gmodule.def from builddir, not srcdir.

2008-09-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.18.0 ===

2008-08-18  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.7 ===

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.6 ===

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.5 ===

2008-08-01  Hans Breuer  <hans@breuer.org>

	* makefile.msc.in : adapt to gmodule.symbols usage

2008-07-27  Tor Lillqvist  <tml@novell.com>

	* gmodule.symbols: New file.

	* gmodule.c: Bypass the Windows ABI compatibility symbols on
	64-bit Windows. Thus no need to keep the file name in system
	codepage around on 64-bit Windows either.
	
	* Makefile.am: Produce gmodule.def from gmodule.symbols. Dist
	gmodule.symbols instead of gmodule.def.

	* gmodule.def: Drop from SVN.

2008-07-27  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (gmodule-2.0.lib): Pass appropriate -machine flag to
	lib.exe.

2008-07-21  Matthias Clasen  <mclasen2redhat.com>

	* === Released 2.17.4 ===

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.3 ===

2008-06-12  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.17.2 ===

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.1 ===

2008-05-28  Michael Natterer  <mitch@imendio.com>

	* Makefile.am: don't define G_DISABLE_SINGLE_INCLUDES, it's in
	the global CPPFLAGS now.

2008-05-27  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.0 ===

2008-05-05  Michael Natterer  <mitch@imendio.com>

	* Makefile.am. build with G_DISABLE_SINGLE_INCLUDES to prevent
	code from being checked in that breaks the build of applications
	which use G_DISABLE_SINGLE_INCLUDES.

	* gmodule.c: #include "glib.h" instead of "glibconfig.h"
